--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -6,7 +6,7 @@ typeMismatch.java.lang.Integer={0}\u306f\u6574\u6570\u3067\u5165\u529b\u3057\u30
 
 wrong_id_or_pass=\u30ed\u30b0\u30a4\u30f3ID\u307e\u305f\u306f\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u4e0d\u6b63\u3067\u3059
 
-plant_name=\u89b3\u8449\u690d\u7269\u540d
-plant_cpl=\u690d\u7269ID
+botanic_name=\u690d\u7269\u540d
+botanic_cpl=\u690d\u7269ID
 loginId=\u30ed\u30b0\u30a4\u30f3ID
 loginPass=\u30d1\u30b9\u30ef\u30fc\u30c9
