--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 # \u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u63a5\u7d9a\u8a2d\u5b9a
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/indoor_plants_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/botanicEncounters_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.profiles.active=dev
 spring.thymeleaf.cache=false
+
 
 
 
