--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ mybatis.type-aliases-package=com.example.app.domain
 # \u30d5\u30a1\u30a4\u30eb\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u306e\u8a2d\u5b9a
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
+
+# \u30bb\u30c3\u30b7\u30e7\u30f3\u306e\u6709\u52b9\u671f\u9650\u309230\u5206\u306b\u8a2d\u5b9a
+server.servlet.session.timeout=30m
